frontend/tests/cases/positive/deriving/pushEitherGen.gr
-- push example
data Either a b = Left a | Right b

foo : forall {a : Type, b : Type, s : Semiring, r : s} . {(1 : s) <= r} => (Either a b) [r] -> Either (a [r]) (b [r])
foo = push @Either

-- main : Either (Int []) (Int [])
-- main = foo [Left 1]