frontend/tests/cases/negative/graded/polySemiring.gr
foo : forall {s : Semiring, r : s, a : Type} . a [r] -> (a, a)
foo [x] = (x, x)